# apertium-quc

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  apertium-quc.pc.in  apertium-quc.quc.lexc  apertium-quc.quc.mor.twol  apertium-quc.quc.phon  apertium-quc.quc.rlx  apertium-quc.quc.spellrelax  apertium-quc.quc.tagged  apertium-quc.quc.twol  apertium-quc.quc.udx  configure.ac  modes.xml  quc.prob
corpora/: README.md  almg-examples.dep  almg-examples.ref  almg-examples.seg  biblia.dep  biblia.seg  canpixabaj2015.dep  canpixabaj2015.seg  covid.dep  covid.ref  covid.seg  covid.src  cuentos.dep  cuentos.ref  cuentos.seg  cuentos.src  example.dep  example.ref  example.seg  example.src  henderson.dep  henderson.seg  ley2009-9.dep  ley2009-9.ref  ley2009-9.seg  ley2009-9.src  utexas.dep  utexas.ref  utexas.seg  utexas.src  utexas.tagged  wikipedia.dep  wikipedia.ref  wikipedia.seg
dev/: countstems.sh
dev/tests/: intransitive.tsv
dev/weighting/: oracle.py  randomise.py  steps.sh
eval/: README.md  corpus.ref  estimate-morph.py  unknown.txt  utexas.ref
scripts/: conllise.py
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-morph-gold.txt  analysis-morph-output.txt  tests.json
